--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ gunicorn==20.1.0
 Pillow==8.3.2
 pytesseract==0.3.8
 beautifulsoup4==4.10.0
-numpy==1.21.4 
+numpy 
 pip==21.2.4
 opencv-python==4.5.3.56 
 Werkzeug==2.1.1 
