--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.0.1
 gunicorn==20.1.0
 Pillow==8.3.2
 pytesseract==0.3.8
+numpy
 beautifulsoup4==4.10.0
 Werkzeug==2.1.1 
 opencv-python==4.5.3.56 
