--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.0.1
 Pillow==8.2.0
 pytesseract==0.3.8
-opencv-python==4.5.2.54
+opencv-python
 numpy==1.21.2
 requests==2.26.0
 beautifulsoup4==4.10.0
