--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==2.0.1
-gunicorn==20.1.0
+Werkzeug==2.0.1
 Pillow==8.2.0
 pytesseract==0.3.8
 opencv-python
 numpy
 requests==2.26.0
 beautifulsoup4==4.10.0
-
+gunicorn==20.1.0
